--- a/Control.xaml
+++ b/Control.xaml
@@ -18,12 +18,16 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row ="0" VerticalAlignment="Center" Text="ALE Restart Watchdog" FontWeight="Bold" FontSize="16" Grid.ColumnSpan="2" Margin="5"/>
 
-        <TextBlock Grid.Column="0" Grid.Row ="1" VerticalAlignment="Center" Text="Restart Timeout (Seconds)" Margin="5"/>
-        <TextBox Name="DelayInSeconds" Grid.Column="1" Grid.Row ="1" Grid.ColumnSpan="2" Margin="5" Text="{Binding DelayInSeconds}"/>
+        <TextBlock Grid.Column="0" Grid.Row ="1" VerticalAlignment="Center" Text="Enabled" Margin="5"/>
+        <CheckBox Name="Enabled" Grid.Column="1" Grid.Row ="1" Grid.ColumnSpan="2" Margin="5" IsChecked="{Binding Enabled}"/>
+
+        <TextBlock Grid.Column="0" Grid.Row ="2" VerticalAlignment="Center" Text="Restart Timeout (Seconds)" Margin="5"/>
+        <TextBox Name="DelayInSeconds" Grid.Column="1" Grid.Row ="2" Grid.ColumnSpan="2" Margin="5" Text="{Binding DelayInSeconds}"/>
 
         <Button Grid.Column="2" Grid.Row="3" Content="Save Config" Margin="5" Click="SaveButton_OnClick"></Button>
         
